hphp/test/zend/good/ext/gd/tests/gif2gd.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}

	if (!function_exists("imagecreatefromgif")) {
		die("skip gif read support unavailable");
	}
?>