hphp/test/zend/bad/ext/gd/tests/xpm2gd.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}

	if (!function_exists("imagecreatefromxpm")) {
		die("skip xpm read support unavailable");
	}
?>